--- a/applications.properties
+++ b/applications.properties
@@ -1,7 +1,7 @@
 hfx.api.generate=https://bfhldevapigw.healthrx.co.in/hiring/generateWebhook/JAVA
 hfx.api.submit=https://bfhldevapigw.healthrx.co.in/hiring/testWebhook/JAVA
 
-# Replace with your details
 hfx.payload.name=Nelakurthi Sravya
 hfx.payload.regNo=22BCE9978
-hfx.payload.email=nelakurthisravya@gmail.com
+hfx.payload.email=sravya.22bce9978@vitapstudent.ac.in
+
